# RJPOLICE_HACK_595_CYBERTECH_4

./: CRPC_ID_NLP.py  IPC_ID_NLP.py  README.md  best_model.h5  env.py  llm.py  main.py  ocr.py  pdf_extractor.py  pyproject.toml  require.txt  requirements.txt
rajastan/: ansgen.py  ui.py
rajastan/components/: faq.py  sidebar.py
rajastan/core/: caching.py  chunking.py  embedding.py  model_configure.py  prompts.py  qa.py  utils.py
